CC 5 star review

--- a/frontend/hotel/hotel-admin-tool.html
+++ b/frontend/hotel/hotel-admin-tool.html
@@ -6,7 +6,7 @@
     <title>Hotellbokning</title>
 </head>
 <body>
-    <b>Boka rum</b><br>
+    <b>Välkommen Admin,Boka rum</b><br>
     Rum: <select id="room"></select> Gäst:<select id="guest"></select><br>
 
     Bokning startdatum: <input id="datefrom" type="date">
