--- a/frontend/hotel/hotel-admin-tool.html
+++ b/frontend/hotel/hotel-admin-tool.html
@@ -6,7 +6,7 @@
     <title>Hotellbokning</title>
 </head>
 <body>
-    <b>Välkommen Admin,Boka rum</b><br>
+    <b>Välkommen Admin. Boka rum</b><br>
     Rum: <select id="room"></select> Gäst:<select id="guest"></select><br>
 
     Bokning startdatum: <input id="datefrom" type="date">
@@ -57,7 +57,9 @@
         let bookingsHtml = "";
         for (b of bookings) {
             bookingsHtml += `
-                <li>${b.datefrom} Room: ${b.room_id} Guest: ${b.guest_id}</li>
+                <li>${b.datefrom} Room: ${b.room_number} Guest: ${b.firstname}
+                    ${b.addinfo}
+                    </li>
             `;
         }
         document.querySelector('#bookings').innerHTML = bookingsHtml;
